@@ -10,11 +10,13 @@ Legend:
  % Development flag or note, such as branching.
 
 
-Pretty URLs 0.8.4                                                    ??
+Pretty URLs 0.8.4                                                  16 June, 2008
 ================================================================================
  ! Base: Replace cached URLs in 2.0. (QueryString.php)
  % Base: Now compatible with TinyPortal 1.0.5.
  ! Topics: Topics about unions are now fine. (PrettyUrls-Filters.php)
+ ! Boards/Topics: Make it easier for other mods by checking $_REQUEST['pretty'] rather than $_GET. (QueryString.php)
+ % Base: Updated for SMF 2.0 Beta 4 Public.
 
 Pretty URLs 0.8.3                                                    9 May, 2008
 ================================================================================
